waze_project.ipynb

--- a/waze_project.ipynb
+++ b/waze_project.ipynb
@@ -86,7 +86,7 @@
     {
       "cell_type": "code",
       "source": [
-        "df = pd.read_csv('/content/drive/MyDrive/Classroom/AI Essential Batch-1/waze_dataset.csv')\n",
+        "df = pd.read_csv('/kaggle/input/waze-dataset-to-predict-user-churn/waze_dataset.csv')\n",
         "df.head()"
       ],
       "metadata": {
